# Engine-Chili2.0

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  build_direct.bat  build_direct_inner.bat  clean.cmd  configure.cmd  rebuild.cmd
.claude/: settings.json  settings.local.json
.claude/hooks/: cpp-docs-context.ps1
.github/workflows/: windows-build.yml
apps/_template/: CMakeLists.txt
apps/_template/src/: template_app.cpp
apps/pong/: CMakeLists.txt
apps/pong/preview/: main.cpp
apps/pong/runtime/: game_runtime_api.cpp
apps/pong/src/: game_host.cpp  game_host.hpp  game_main.cpp  pong_app.cpp  pong_ball_script.cpp  pong_ball_script.hpp  pong_frame_builder.cpp  pong_frame_builder.hpp  pong_paddle_script.cpp  pong_paddle_script.hpp  pong_rules.hpp  scene_manager.cpp  scene_manager.hpp  scene_manager_script.cpp  scene_manager_script.hpp
apps/sandbox/: CMakeLists.txt
apps/sandbox/archive/: fruit_ninja_previous_sandbox_app.cpp  fruit_ninja_previous_sandbox_app.hpp  hex_observation_sandbox_app.cpp  hex_observation_sandbox_app.hpp  legacy_sandbox_app.cpp  scenario_shell_sandbox_app.cpp  scenario_shell_sandbox_app.hpp
apps/sandbox/assets/: README.md
apps/sandbox/assets/prototypes/: blue_cube.prototype.json  red_cube.prototype.json
apps/sandbox/src/: main.cpp  sandbox_app.cpp  sandbox_app.hpp  sandbox_builtin_meshes.hpp
apps/studio/: CMakeLists.txt  README.md
apps/studio/archive/coretools-angular-spike-2026-04-07/angular/: README.md  angular.json  package-lock.json  package.json
apps/studio/archive/coretools-angular-spike-2026-04-07/angular/src/: index.html  main.ts  styles.css
apps/studio/archive/coretools-angular-spike-2026-04-07/angular/src/app/: app.component.css  app.component.html  app.component.ts
apps/studio/archive/coretools-angular-spike-2026-04-07/runtime/: index.html  main.js  styles.css
apps/studio/config/: engine.ini
apps/studio/coretools/: README.md  app.js  index.html  style.css
apps/studio/coretools/panels/: hello-panel.js
apps/studio/coretools/runtime/: index.html  studio-top.css  studio-top.html  style.css
apps/studio/coretools/runtime/bottom/: console.css  console.html
apps/studio/coretools/runtime/bottom-bar/: bottom-bar.html
apps/studio/coretools/runtime/dialogs/: scene-settings-dialog.html
apps/studio/coretools/runtime/file/: file-management.css  file-management.html  new-project.css  new-project.html
apps/studio/coretools/runtime/left-bar/: left-bar.html
apps/studio/coretools/runtime/panels/project-explorer/: project-explorer.css  project-explorer.html
apps/studio/coretools/runtime/right-bar/: right-bar.html
apps/studio/coretools/runtime/shared/: studio.css
apps/studio/coretools/runtime/shell/: index.html  style.css
apps/studio/coretools/runtime/top-bar/: top-bar.html
apps/studio/coretools/runtime/topbar/: studio-top.css  studio-top.html
apps/studio/runtime_test/: engine_file_test.txt
apps/studio/src/: main.cpp  studio_app.cpp  studio_app.hpp  studio_host.cpp  studio_host.hpp
apps/studio/src/bridge/: engine_bridge.cpp  engine_bridge.hpp
apps/studio/src/commands/: command_router.cpp  command_router.hpp
apps/studio/src/events/: event_bus.cpp  event_bus.hpp
apps/studio/src/layout/: dock_layout.cpp  dock_layout.hpp
apps/studio/src/network/: http_server.cpp  http_server.hpp  websocket_server.cpp  websocket_server.hpp
apps/studio/src/runtime/: cursor_space_calibration.cpp  cursor_space_calibration.h  default_scene_json.cpp  default_scene_json.hpp  hello_game_runtime.cpp  hello_game_runtime.hpp  pong_runtime.cpp  pong_runtime.hpp  proxy_prototype_resolver.cpp  proxy_prototype_resolver.hpp  runtime_commands.cpp  runtime_commands.hpp  runtime_game_api.hpp  runtime_queries.cpp  runtime_queries.hpp  runtime_registry.cpp  runtime_registry.hpp  runtime_world.cpp  runtime_world.hpp  scene_prototype.hpp  scene_runtime.cpp  scene_runtime.hpp  scene_serializer.cpp  scene_serializer.hpp  studio_camera.cpp  studio_camera.hpp  studio_connector.cpp  studio_connector.hpp  studio_default_scene_template.cpp  studio_default_scene_template.hpp  studio_interaction_controller.cpp  studio_interaction_controller.hpp  studio_picking_service.cpp  studio_picking_service.hpp  studio_preview_runtime.cpp  studio_preview_runtime.hpp  studio_runtime_host.cpp  studio_runtime_host.hpp  vector_icon.cpp  vector_icon.hpp  (+2 more)
apps/studio/src/studio/: file_management_dialog.cpp  file_management_dialog.hpp  file_proxy.cpp  file_proxy.hpp  new_project_dialog.cpp  new_project_dialog.hpp  project_explorer_panel.cpp  project_explorer_panel.hpp  proxy_library.cpp  proxy_library.hpp  scene_settings_dialog.hpp  studio_build_system.cpp  studio_build_system.hpp  studio_console_panel.cpp  studio_console_panel.hpp  studio_file_actions.cpp  studio_file_actions.hpp  studio_layout_state.cpp  studio_layout_state.hpp  studio_project_system.cpp  studio_project_system.hpp  studio_template_system.cpp
apps/studio/src/webview/: coretools_host.cpp  coretools_host.hpp
apps/studio/tools/coretools/: index.js  manifest.json
apps/studio/webhost/: app.js  index.html  style.css
apps/studio/webhost/shell/: runtime.js
archive/: console.cpp  console.hpp  filesystem.cpp  filesystem.hpp
assets/scenes/: api_test.scene.json  default.scene.json  pong.scene.json
assets/studio/: vector_icons.json
cmake/: compiler_warnings.cmake  sanitizers.cmake
core/: CMakeLists.txt
docs/: README.md
docs/css/: README.md  theme-dark-high-contrast.css  theme-dark-medium-contrast.css  theme-dark.css  theme-light-high-contrast.css  theme-light-medium-contrast.css  theme-light.css  (+1 more)
src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/script/: iscript_behavior.hpp  script_context.cpp  script_context.hpp  script_event.hpp  script_instance.cpp  script_instance.hpp  script_module.cpp  script_module.hpp  script_prototype.cpp  script_prototype.hpp  script_registry.cpp  script_registry.hpp
src/engine/script/behaviors/: rotate_self_script.cpp  rotate_self_script.hpp
tools/hotbuild/: CMakeLists.txt
tools/hotbuild/src/: main.cpp
(+183 files in other folders)
