add_library(engine_core
    ../src/core/engine_core.cpp
    ../src/core/module_manager.cpp
    ../src/prototypes/compiler/infinite_plane_render_compiler.cpp
    ../src/prototypes/compiler/object_render_compiler.cpp
    ../src/prototypes/compiler/progressive_hex_render_compiler.cpp
    ../src/prototypes/compiler/render_frame_compiler.cpp
    ../src/prototypes/compiler/sandbox_scene_presets.cpp
    ../src/prototypes/systems/moving_cube_sample_scene.cpp
    ../src/systems/light_ray/light_ray_system.cpp
    ../src/modules/diagnostics/diagnostics_module.cpp
    ../src/modules/diagnostics/hex_observation_debug_budget.cpp
    ../src/modules/diagnostics/hex_observation_debug_logic.cpp
    ../src/modules/file/file_module.cpp
    ../src/modules/gpu/gpu_module.cpp
    ../src/modules/gpu/gpu_compute_module.cpp
    ../src/modules/input/input_module.cpp
    ../src/modules/jobs/job_module.cpp
    ../src/modules/logger/logger_module.cpp
    ../src/modules/memory/memory_module.cpp
    ../src/modules/native_ui/native_button_host.cpp
    ../src/modules/native_ui/native_ui_module.cpp
    ../src/modules/platform/platform_module.cpp
    ../src/modules/platform/platform_window.cpp
    ../src/modules/prototypes/prototype_module.cpp
    ../src/modules/prototypes/prototype_importer.cpp
    ../src/modules/render/progressive_hex_render_controller.cpp
    ../src/modules/render/progressive_hex_strategy.cpp
    ../src/modules/render/render_module.cpp
    ../src/modules/resources/resource_module.cpp
    ../src/modules/resources/texture_decode.cpp
    ../src/modules/render/render_backend_factory.cpp
    ../src/modules/render/backend/dx11_render_backend.cpp
    ../src/modules/render/backend/null_render_backend.cpp
    ../src/modules/timer/timer_module.cpp
    ../src/modules/webview/web_dialog_host.cpp
    ../src/modules/webview/webview_module.cpp
    ../src/core/engine_context.hpp
    ../src/core/engine_core.hpp
    ../src/core/module.hpp
    ../src/core/module_manager.hpp
    ../src/modules/diagnostics/diagnostics_module.hpp
    ../src/modules/diagnostics/hex_observation_debug_budget.hpp
    ../src/modules/diagnostics/hex_observation_debug_logic.hpp
    ../src/modules/diagnostics/hex_observation_debug_types.hpp
    ../src/modules/file/file_module.hpp
    ../src/modules/gpu/gpu_module.hpp
    ../src/modules/gpu/gpu_compute_module.hpp
    ../src/modules/gpu/igpu_service.hpp
    ../src/modules/input/input_module.hpp
    ../src/modules/jobs/job_module.hpp
    ../src/modules/logger/logger_module.hpp
    ../src/modules/memory/memory_module.hpp
    ../src/modules/native_ui/native_button_host.hpp
    ../src/modules/native_ui/native_ui_module.hpp
    ../src/modules/platform/platform_module.hpp
    ../src/modules/platform/platform_window.hpp
    ../src/modules/prototypes/iprototype_service.hpp
    ../src/modules/prototypes/prototype_importer.hpp
    ../src/modules/prototypes/prototype_module.hpp
    ../src/modules/render/progressive_hex_render_controller.hpp
    ../src/modules/render/progressive_hex_strategy.hpp
    ../src/modules/render/render_module.hpp
    ../src/modules/render/render_builtin_meshes.hpp
    ../src/modules/render/render_frame_data.hpp
    ../src/modules/resources/resource_module.hpp
    ../src/modules/resources/texture_decode.hpp
    ../src/modules/resources/iresource_service.hpp
    ../src/modules/render/render_types.hpp
    ../src/modules/render/render_frame_context.hpp
    ../src/modules/render/render_backend_factory.hpp
    ../src/modules/render/backend/dx11_render_backend.hpp
    ../src/modules/render/backend/irender_backend.hpp
    ../src/modules/render/backend/null_render_backend.hpp
    ../src/modules/render/math/render_math.hpp
    ../src/prototypes/iprototype.hpp
    ../src/prototypes/prototype_null.hpp
    ../src/prototypes/entity/appearance/absorption.hpp
    ../src/prototypes/entity/appearance/color.hpp
    ../src/prototypes/entity/appearance/light.hpp
    ../src/prototypes/entity/appearance/material.hpp
    ../src/prototypes/entity/appearance/reflection.hpp
    ../src/prototypes/entity/geometry/face.hpp
    ../src/prototypes/entity/geometry/line.hpp
    ../src/prototypes/entity/geometry/point.hpp
    ../src/prototypes/entity/object/mesh.hpp
    ../src/prototypes/entity/object/object.hpp
    ../src/prototypes/entity/scene/camera.hpp
    ../src/prototypes/entity/scene/infinite_plane.hpp
    ../src/prototypes/systems/moving_cube_sample_scene.hpp
    ../src/prototypes/systems/light_ray.hpp
    ../src/systems/light_ray/light_ray_system.hpp
    ../src/prototypes/compiler/infinite_plane_render_compiler.hpp
    ../src/prototypes/compiler/object_render_compiler.hpp
    ../src/prototypes/compiler/progressive_hex_render_compiler.hpp
    ../src/prototypes/compiler/progressive_hex_render_strategy.hpp
    ../src/prototypes/compiler/sandbox_scene_presets.hpp
    ../src/prototypes/math/color_sample_math.hpp
    ../src/prototypes/compiler/render_frame_compiler.hpp
    ../src/prototypes/math/cube_sample_math.hpp
    ../src/prototypes/math/hex_grid.hpp
    ../src/prototypes/math/reflectivity_math.hpp
    ../src/modules/timer/timer_module.hpp
    ../src/modules/webview/web_dialog_host.hpp
    ../src/modules/webview/webview_module.hpp
)

target_include_directories(engine_core
    PUBLIC
        ${PROJECT_SOURCE_DIR}/src
)

target_compile_features(engine_core PUBLIC cxx_std_17)
apply_project_warnings(engine_core)
enable_project_sanitizers(engine_core)

if(WIN32)
    target_link_libraries(engine_core
        PUBLIC
            ole32
            d3d11
            d3dcompiler
            dxgi
    )
endif()

if(MINGW)
    target_link_libraries(engine_core
        PUBLIC
            gdi32
            winmm
    )
endif()

set_target_properties(engine_core PROPERTIES
    FOLDER "core"
)
